--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-clear cmd pour clear un certain nbr de messages
+#DONE clear cmd pour clear un certain nbr de messages
    (peut etre rajouter des filtres de personnes etc)
 lockdown_mode, avec le role à lockdown
